# minimal-arc

./: README.md  repo_structure.yaml
arc-data/: mit-easy.json  mit-expert.json  mit-hard.json  mit-medium.json  mit-split.json
dsl/: .flattenignore  README.md  flattened_repo.txt  main.py  pyproject.toml  repo_structure.yaml  requirements.txt  results.json  task.md  test_tile_pattern.py  todo.md
dsl/cli/: run_arc.py  run_dataset.py  run_task.py
dsl/dsl_utils/: primitives.py  program.py  types.py
dsl/examples/: 01_demo.ipynb
dsl/io/: loader.py  visualizer.py
dsl/parallel/: job_queue.py
dsl/results/: results.json
dsl/search/: enumerator.py  grid_signature.py  heuristics.py  verifier.py
dsl/solver/: task_solver.py
dsl/tests/: debug_flood_fill.py  run_tests.py  test_color.py  test_dataset_runner.py  test_primitives.py  test_program.py  test_search.py  test_solution_loading.py
greenblatt/: .flattenignore  .gitignore  README.md  TODO.md  __init__.py  check_solutions.py  flattened_repo.txt  main.py  project.md  pyproject.toml  repo_structure.yaml  run_k_analysis.py  task.md
llmgs/: README.md  flattened_repo.txt  project.md  pyproject.toml  run_k_analysis.py  sample.env
llmgs/agent/: __init__.py
llmgs/core/: evaluate.py  generate_programs.py  prompt_template.txt
llmgs/results/: mit_easy_results.json
llmgs/results/k_analysis/k_32/: results.json
llmgs/sandbox/: __init__.py  local_executor.py
llmgs/test-scripts/: openai_client_test.py  simple_mcp_test.py  test_simplified_runner.py
ttt/: README.md  simple-neural.py  trelis-ttt.ipynb
(+42 files in other folders)
